examples/errors/stack_type.aaa
fn
    main
begin
    3 "" + .
end
